my-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-deploy
  labels:
    app:  myweb
spec:
  replicas: 2
  selector:
    matchLabels:
        app:  myweb
  template:
    metadata:
      labels:
        app:  myweb
    spec:
       containers:
        - name: myweb
          image:  nginx
          ports:
          - containerPort:  8080
