webserver.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webserver
  labels:
    app: webserver
spec:
  replicas: 2
  selector:
    matchLabels:
      app: webserver
  template:
    metadata:
        labels:
          app: webserver
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 8080
~
