service-for-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: webserver
  name: int-webserver
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: webserver
  type: ClusterIP
