service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ng-servce
  labels:
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: myweb
  type: LoadBalancer
