ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: webserver-ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: int-webserver
          servicePort:  8080
